--- a/css/morkborg.css
+++ b/css/morkborg.css
@@ -467,8 +467,8 @@
 }
 
 .morkborg.sheet.actor.character .sheet-header .hitpoints-row {
-  flex: 0 0 30px;
   display: flex;
+  flex: 0 0 30px;
   margin-bottom: 7px;
 }
 
@@ -966,27 +966,29 @@ TODO: figure out if we want a 2-col inventory
 }
 
 .morkborg.sheet.actor.creature .sheet-header {
-  margin-top: 0;
-  flex: 0 0 90px;
   display: flex;
+  flex: 0 0 90px;
   flex-direction: row;
+  margin-top: 0;
   padding: 5px;
 }
 
 .morkborg.sheet.actor.creature .sheet-header .header-col1 {
-  flex: 0 0 100px;
+  flex: 0 0 200px;
 }
 
 .morkborg.sheet.actor.creature .sheet-header .header-col2 {
-  flex: 1;
-  margin: 5px;
   display: flex;
+  flex: 1;
   flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  margin: 5px;
 }
 
 .morkborg.sheet.actor.creature .sheet-header .profile-img {
-  height: 100px;
-  width: 100px;
+  height: 200px;
+  width: 200px;
 }
 
 .morkborg.sheet.actor.creature .sheet-header .name-row {
@@ -1000,19 +1002,9 @@ TODO: figure out if we want a 2-col inventory
   height: 45px;
 }
 
-.morkborg.sheet.actor.creature .sheet-header .altname-row {
-  flex: 0 0 30px;
-  margin-bottom: 8px;
-  padding-left: 12px;
-}
-
-.morkborg.sheet.actor.creature .sheet-header .altname-row input[type="text"] {
-  font-family: var(--h3-font);
-  font-size: 24px;
-}
-
 .morkborg.sheet.actor.creature .sheet-header .hitpoints-row {
   flex: 0 0 35px;
+  margin-bottom: 10px;
   margin-left: 14px;
 }
 
@@ -1110,19 +1102,21 @@ TODO: figure out if we want a 2-col inventory
 }
 
 .morkborg.sheet.actor.follower .sheet-header .header-col1 {
-  flex: 0 0 100px;
+  flex: 0 0 200px;
 }
 
 .morkborg.sheet.actor.follower .sheet-header .header-col2 {
-  flex: 1;
-  margin: 5px;
   display: flex;
+  flex: 1;
   flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  margin: 5px;
 }
 
 .morkborg.sheet.actor.follower .sheet-header .profile-img {
-  height: 100px;
-  width: 100px;
+  height: 200px;
+  width: 200px;
 }
 
 .morkborg.sheet.actor.follower .sheet-header .name-row {
@@ -1136,19 +1130,9 @@ TODO: figure out if we want a 2-col inventory
   height: 45px;
 }
 
-.morkborg.sheet.actor.follower .sheet-header .altname-row {
-  flex: 0 0 30px;
-  padding-left: 12px;
-  margin-bottom: 8px;
-}
-
-.morkborg.sheet.actor.follower .sheet-header .altname-row input[type="text"] {
-  font-family: var(--h3-font);
-  font-size: 24px;
-}
-
 .morkborg.sheet.actor.follower .sheet-header .hitpoints-row {
   flex: 0 0 35px;
+  margin-bottom: 10px;
   margin-left: 14px;
 }
 
