--- a/css/morkborg.css
+++ b/css/morkborg.css
@@ -1008,11 +1008,6 @@ TODO: figure out if we want a 2-col inventory
   margin-left: 14px;
 }
 
-.morkborg.sheet.item .sheet-body {
-  margin-top: 8px;
-  padding: 5px;
-}
-
 .morkborg.sheet.creature .sheet-body .form-group {
   margin-bottom: 8px;
 }
@@ -1049,11 +1044,17 @@ TODO: figure out if we want a 2-col inventory
   padding: 5px;
 }
 
+.morkborg.sheet.item .sheet-header .profile-img {
+  height: 150px;
+  width: 150px;
+}
+
 .morkborg.sheet.item .sheet-header .item-name input[type="text"] {
   font-family: var(--h1-font);
   font-size: 38px;
   flex: 1;
   height: 45px;
+  margin-bottom: 10px;
 }
 
 .morkborg.sheet.item .sheet-header .item-subtitle {
