--- a/templates/class-sheet.html
+++ b/templates/class-sheet.html
@@ -1,10 +1,15 @@
 <form class="flexcol {{cssClass}}" autocomplete="off">
 
-    {{!-- Sheet Header --}}
-    <header class="sheet-header">
-        <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
-        <div class="header-fields">
-            <h1 class="item-name"><input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'MB.ItemName' }}" /></h1>
+    {{!-- Item Sheet Header --}}
+    <header class="sheet-header flexrow">
+        <img class="profile-img" src="{{item.img}}" title="{{item.name}}" data-edit="img"/>
+        <div class="header-details">
+            <h1 class="item-name">
+                <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'MB.ItemName' }}"/>
+            </h1>
+            <div class="item-subtitle">
+                <h4 class="item-type">{{item.type}}</h4>
+            </div>
         </div>
     </header>
 
