--- a/templates/misc-sheet.html
+++ b/templates/misc-sheet.html
@@ -46,6 +46,12 @@
                 <label>{{ localize "MB.ContainerSpace" }}:</label>
                 <input type="text" name="data.containerSpace" value="{{data.containerSpace}}" placeholder="1" data-dtype="Number" />
             </div> 
+
+            {{!-- Quantity --}}
+            <div class="form-group">
+                <label>{{ localize "MB.Quantity" }}:</label>
+                <input type="text" name="data.quantity" value="{{data.quantity}}" placeholder="1" data-dtype="Number" />
+            </div> 
             
         </div>
 
