Support scroll macro.

--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -223,7 +223,7 @@
                 <div class="powers-gutter">
                 </div>
                 <div class="wield-power">
-                    <button type="button" class="rollable wield-power-button" data-roll="d20+@abilities.presence.value" data-label="{{localize 'MB.WieldAPower'}}" >{{localize "MB.WieldAPower"}}</button>
+                    <button type="button" class="rollable wield-power-button">{{localize "MB.WieldAPower"}}</button>
                     <span class="rule-text wield-rule">{{localize 'MB.WieldAPowerText'}}</span>
                 </div>
                 <div class="powers-gutter">
