--- a/scss/morkborg.scss
+++ b/scss/morkborg.scss
@@ -262,6 +262,10 @@
   font-family: var(--item-font);
   font-size: 10pt;
 }
+.morkborg.sheet.actor .you-have-no {
+  /* TODO: decide if this is better left-align or centered */
+  /* text-align: center; */
+}
 /* ====================== */
 /* Actor sheet header */
 /* ====================== */
