--- a/templates/reaction-roll-card.html
+++ b/templates/reaction-roll-card.html
@@ -7,7 +7,7 @@
             <span>{{localize 'MB.Reaction'}}: {{reactionRoll.formula}}</span>
         </div>
         <div class="roll-result">
-            <span>{{reactionRoll.total}}</span>
+            <span>{{xtotal reactionRoll}}</span>
         </div>
         <div class="reaction-text">
             {{actor.name}} {{localize 'MB.Is'}} {{reactionText}}
