--- a/templates/test-ability-roll-card.html
+++ b/templates/test-ability-roll-card.html
@@ -12,7 +12,7 @@
             <span>{{abilityRoll.formula}}</span>
         </div>
         <div class="roll-result">
-            <span>{{abilityRoll.total}}</span>
+            <span>{{xtotal abilityRoll}}</span>
         </div>
     </div>
 </form>
