Add group and individual initiative buttons.

--- a/css/morkborg.css
+++ b/css/morkborg.css
@@ -701,6 +701,25 @@ span {
 /* ====================== */
 /* Actor sheet violence tab */
 /* ====================== */
+.morkborg.sheet.actor .sheet-body .violence-tab .initiative-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.morkborg.sheet.actor .sheet-body .violence-tab .initiative-button {
+  background-color: var(--foreground-color);
+  border: none;
+  border-bottom: 2px solid #777;
+  border-radius: 0;
+  color: var(--background-color);
+  flex: 0 0 230px;
+  font-family: var(--h2-font);
+  font-size: 20px;
+  margin-right: 20px;
+}
+
 .morkborg.sheet.actor .sheet-body .violence-tab .item-list.weapon-list .item {
   align-items: center;
 }
@@ -827,20 +846,10 @@ input[type="radio"]:disabled
 
 .morkborg.sheet.actor .sheet-body .violence-tab .underarmor-row {
   margin-top: 0px;
-  display: flex;
-  flex-direction: row;
-}
-
-.morkborg.sheet.actor
-.sheet-body
-.violence-tab
-.underarmor-row
-.incoming-attack {
-  flex: 1;
   text-align: center;
 }
 
-.morkborg.sheet.actor .sheet-body .violence-tab .incoming-attack button {
+.morkborg.sheet.actor .sheet-body .violence-tab .underarmor-row button {
   margin-left: 10px;
   width: 120px;
   margin-bottom: 10px;
