--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -93,6 +93,10 @@
 
         {{!-- Violence Tab --}}
         <div class="tab violence-tab" data-group="primary" data-tab="violence">
+            <div class="initiative-buttons">
+                <button type="button" class="item-button rollable initiative-button party-initiative" title="{{localize 'MB.PartyInitiative'}}">{{localize 'MB.PartyInitiative'}}</button> 
+                <button type="button" class="item-button rollable initiative-button individual-initiative" title="{{localize 'MB.IndividualInitiative'}}">{{localize 'MB.IndividualInitiative'}}</button> 
+            </div>
             <ol class="items-list inventory-list">
                 <li class="items-header flexrow">
                     <h3 class="item-name flexrow">{{localize "MB.ItemTypeWeaponPlural"}}</h3>
@@ -181,18 +185,18 @@
                       {{/unless}}
                     {{/unless}}
                 </ol>
-                <div class="underarmor-row">
-                    <div class="incoming-attack">
-                        <div>
-                            <button type="button" class="item-button rollable defend-button" title="{{localize 'MB.Defend'}}">{{localize "MB.Defend"}}</button>
-                        </div>
-                        <div class="rule-text defend-rule">
-                            {{localize 'MB.DefendCritText'}}
-                            {{localize 'MB.DefendFumbleText'}}
-                        </div>
+            </ol>
+            <div class="underarmor-row">
+                <div class="incoming-attack">
+                    <div>
+                        <button type="button" class="item-button rollable defend-button" title="{{localize 'MB.Defend'}}">{{localize "MB.Defend"}}</button>
+                    </div>
+                    <div class="rule-text defend-rule">
+                        {{localize 'MB.DefendCritText'}}
+                        {{localize 'MB.DefendFumbleText'}}
                     </div>
                 </div>
-            </ol>
+            </div>
         </div>
 
         {{!-- Feats Tab --}}
