--- a/templates/follower-sheet.html
+++ b/templates/follower-sheet.html
@@ -77,8 +77,8 @@
                         <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
                         <h4 class="item-name">{{item.name}}</h4>
                         <div class="item-fields">
-                            <span class="item-field">{{item.data.handed}}H</span>
-                            <span class="item-field">{{item.data.damageDie}}</span>
+                            <span class="item-field handed">{{item.data.handed}}H</span>
+                            <span class="item-field damage-die">{{item.data.damageDie}}</span>
                         </div>
                         <div class="item-buttons">
                             <button type="button" class="item-button rollable attack-button"
