--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -27,10 +27,7 @@
                     <input class="stat-input" name="data.hp.max" type="number" value="{{data.hp.max}}" data-dtype="Number"/>
                 </div>
                 <div class="rest-buttons">
-                    <button type="button" class="button item-button rest-button rollable" data-label="rest-short"
-                    title="{{localize 'MB.ShortRest'}}">{{localize 'MB.ShortRest'}}</button>
-                    <button type="button" class="button item-button rest-button rollable" data-label="rest-long"
-                    title="{{localize 'MB.LongRest'}}">{{localize 'MB.LongRest'}}</button>
+                    <button type="button" class="button item-button rest-button rollable" title="{{localize 'MB.Rest'}}">{{localize 'MB.Rest'}}</button>
                 </div>
             </div>
             <div class="omens-row">
@@ -103,8 +100,8 @@
                         <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
                         <h4 class="item-name">{{item.name}}</h4>
                         <div class="item-fields">
-                            <span class="item-field">{{item.data.handed}}H</span>
-                            <span class="item-field">{{item.data.damageDie}}</span>
+                            <span class="item-field handed">{{item.data.handed}}H</span>
+                            <span class="item-field damage-die">{{item.data.damageDie}}</span>
                         </div>
                         <div class="item-buttons">
                             <button type="button" class="item-button rollable attack-button" data-roll="d20+@abilities.strength.value" data-label="attack_{{item._id}}"
