Make entire radio/checkbox + label hot on rest dialog.

--- a/templates/rest-dialog.html
+++ b/templates/rest-dialog.html
@@ -5,12 +5,12 @@
         <div>
             <ul>
                 <li>
-                    <input name="rest-length" type="radio" value="short" checked>
-                    <label>Short - Catch your breath, have a drink. Restore d4 HP.</label>
+                    <label>&nbsp;<input name="rest-length" type="radio" value="short" checked>
+                    Short - Catch your breath, have a drink. Restore d4 HP.</label>
                 </li>
                 <li>
-                    <input name="rest-length" type="radio" value="long">
-                    <label>Long - Full night's sleep. Restore d6 HP, regain Omens if depleted,
+                    <label>&nbsp;<input name="rest-length" type="radio" value="long">
+                    Long - Full night's sleep. Restore d6 HP, regain Omens if depleted,
                         regain PRE+d4 Power uses for the day.</label>        
                 </li>
             </ul>
@@ -22,16 +22,16 @@
         <div>
             <ul>
                 <li>
-                    <input name="food-and-drink" type="radio" value="eat" checked>
-                    <label>Eat - Restore stats as above, deduct food or drink.</label>
+                    <label>&nbsp;<input name="food-and-drink" type="radio" value="eat" checked>
+                    Eat - Restore stats as above, deduct food or drink.</label>
                 </li>
                 <li>
-                    <input name="food-and-drink" type="radio" value="donteat" >
-                    <label>Don't eat - Restore no stats.</label>
+                    <label>&nbsp;<input name="food-and-drink" type="radio" value="donteat" >
+                    Don't eat - Restore no stats.</label>
                 </li>
                 <li>
-                    <input name="food-and-drink" type="radio" value="starve">
-                    <label>Starve - 2+ days without food or drink. Restore no stats, lose d4 HP/day.</label>
+                    <label>&nbsp;<input name="food-and-drink" type="radio" value="starve">
+                    Starve - 2+ days without food or drink. Restore no stats, lose d4 HP/day.</label>
                 </li>
             </ul>
     </div>
@@ -42,8 +42,8 @@
         <div>
             <ul>
                 <li>
-                    <input name="infected" type="checkbox">
-                    <label>Infected - Restore no stats, lose d6 HP per day.</label>
+                    <label>&nbsp;<input name="infected" type="checkbox">
+                    Infected - Restore no stats, lose d6 HP per day.</label>
                 </li>
             </ul>
         </div>
