Fix label/input text indent.

--- a/css/morkborg.css
+++ b/css/morkborg.css
@@ -1856,9 +1856,9 @@ a.inline-roll {
   width: 14px;
 }
 
-.rest-dialog li label {
+.rest-dialog li label div {
   display: block;
-  margin-left: 0px;
+  margin-left: 30px;
 }
 
 .rest-dialog .button-row {
