--- a/scss/morkborg.scss
+++ b/scss/morkborg.scss
@@ -1568,9 +1568,9 @@ a.inline-roll {
   height: 14px;
   width: 14px;
 }
-.rest-dialog li label {
+.rest-dialog li label div {
   display: block;
-  margin-left: 0px;
+  margin-left: 30px;
 }
 .rest-dialog .button-row {
   margin-bottom: 10px;
