--- a/templates/rest-dialog.html
+++ b/templates/rest-dialog.html
@@ -5,13 +5,13 @@
         <div>
             <ul>
                 <li>
-                    <label>&nbsp;<input name="rest-length" type="radio" value="short" checked>
-                    Short - Catch your breath, have a drink. Restore d4 HP.</label>
+                    <label><input name="rest-length" type="radio" value="short" checked>
+                    <div>Short - Catch your breath, have a drink. Restore d4 HP.</div></label>
                 </li>
                 <li>
-                    <label>&nbsp;<input name="rest-length" type="radio" value="long">
-                    Long - Full night's sleep. Restore d6 HP, regain Omens if depleted,
-                        regain PRE+d4 Power uses for the day.</label>        
+                    <label><input name="rest-length" type="radio" value="long">
+                        <div>Long - Full night's sleep. Restore d6 HP, regain Omens if depleted,
+                            regain PRE+d4 Power uses for the day.</div></label>        
                 </li>
             </ul>
         </div>
@@ -22,16 +22,16 @@
         <div>
             <ul>
                 <li>
-                    <label>&nbsp;<input name="food-and-drink" type="radio" value="eat" checked>
-                    Eat - Restore stats as above, deduct food or drink.</label>
+                    <label><input name="food-and-drink" type="radio" value="eat" checked>
+                        <div>Eat - Restore stats as above, deduct food or drink.</div></label>
                 </li>
                 <li>
-                    <label>&nbsp;<input name="food-and-drink" type="radio" value="donteat" >
-                    Don't eat - Restore no stats.</label>
+                    <label><input name="food-and-drink" type="radio" value="donteat" >
+                        <div>Don't eat - Restore no stats.</div></label>
                 </li>
                 <li>
-                    <label>&nbsp;<input name="food-and-drink" type="radio" value="starve">
-                    Starve - 2+ days without food or drink. Restore no stats, lose d4 HP/day.</label>
+                    <label><input name="food-and-drink" type="radio" value="starve">
+                        <div>Starve - 2+ days without food or drink. Restore no stats, lose d4 HP/day.</div></label>
                 </li>
             </ul>
     </div>
@@ -42,8 +42,8 @@
         <div>
             <ul>
                 <li>
-                    <label>&nbsp;<input name="infected" type="checkbox">
-                    Infected - Restore no stats, lose d6 HP per day.</label>
+                    <label><input name="infected" type="checkbox">
+                        <div>Infected - Restore no stats, lose d6 HP per day.</div></label>
                 </li>
             </ul>
         </div>
