--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -28,6 +28,7 @@
                 </div>
                 <div class="rest-buttons">
                     <button type="button" class="button item-button rest-button rollable" title="{{localize 'MB.Rest'}}">{{localize 'MB.Rest'}}</button>
+                    <button type="button" class="button item-button get-better-button rollable" title="{{localize 'MB.GetBetter'}}">{{localize 'MB.GetBetter'}}</button>
                 </div>
             </div>
             <div class="omens-row">
