Implement left in the debris part of Getting Better.

--- a/templates/get-better-roll-card.html
+++ b/templates/get-better-roll-card.html
@@ -18,6 +18,9 @@
         <div class="outcome-text">
             <span class="take-damage">{{touOutcome}}</span>
         </div>
+        <div class="roll-title">
+            <span>Left in the debris you find:</span>
+        </div>
         <div class="outcome-text">
             <span class="take-damage">{{debrisOutcome}}</span>
         </div>
