--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -14,7 +14,7 @@
              so we can get the item _id to be found by the common click handler --}}
             <div class="classname-row item" data-item-id="{{data.class._id}}">
                 <img class="classimg" src="{{data.class.img}}" title="{{data.class.name}}" width="24" height="24" />
-                <label class="classname" >{{data.class.name}}</label>
+                <label class="classname item-edit rollable">{{data.class.name}}</label>
                 <div class="item-controls">
                     <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                     <a class="item-control item-scvmify" title="Scvmify"><i class="fas fa-skull"></i></a>
@@ -100,7 +100,7 @@
                     {{#each data.equippedWeapons as |item id|}}
                     <li class="item flexrow" data-item-id="{{item._id}}">
                         <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-                        <h4 class="item-name">{{item.name}}</h4>
+                        <h4 class="item-name item-edit rollable">{{item.name}}</h4>
                         <div class="item-fields">
                             <span class="item-field handed">{{item.data.handed}}H</span>
                             <span class="item-field damage-die">{{item.data.damageDie}}</span>
@@ -137,7 +137,7 @@
                     {{#if data.equippedArmor}}
                     <li class="item flexrow" data-item-id="{{data.equippedArmor._id}}">
                         <img src="{{data.equippedArmor.img}}" title="{{data.equippedArmor.name}}" width="24" height="24" />
-                        <h4 class="item-name">{{data.equippedArmor.name}}</h4>
+                        <h4 class="item-name item-edit rollable">{{data.equippedArmor.name}}</h4>
                         <div class="item-buttons">
                             <div class="armor-tiers">
                                 <div class="tiers">
@@ -161,7 +161,7 @@
                     {{#if data.equippedShield}}
                     <li class="item flexrow" data-item-id="{{data.equippedShield._id}}">
                         <img src="{{data.equippedShield.img}}" title="{{data.equippedShield.name}}" width="24" height="24" />
-                        <h4 class="item-name">{{data.equippedShield.name}}</h4>
+                        <h4 class="item-name item-edit rollable">{{data.equippedShield.name}}</h4>
                         <div class="item-buttons">
                             <span class="rule-text shield-rule">{{localize 'MB.ShieldUseText'}}</span>
                         </div>
@@ -208,7 +208,7 @@
                     {{#each data.feats as |item id|}}
                     <li class="item flexrow" data-item-id="{{item._id}}">
                         <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-                        <h4 class="item-name">{{item.name}}</h4>
+                        <h4 class="item-name item-edit rollable">{{item.name}}</h4>
                         <div class="item-buttons">
                             {{#if item.data.rollLabel}}
                                 <button type="button" class="item-button rollable feat-button" data-roll="{{item.data.rollFormula}}" data-label="{{item.data.rollLabel}}"
@@ -259,7 +259,7 @@
                     {{#each data.scrolls as |item id|}}
                     <li class="item flexrow" data-item-id="{{item._id}}">
                         <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-                        <h4 class="item-name">{{item.name}}</h4>
+                        <h4 class="item-name item-edit rollable">{{item.name}}</h4>
                         <div class="item-buttons">
                         </div>
                         <div class="item-controls">
@@ -315,7 +315,7 @@
                     {{#each data.equipment as |item id|}}
                     <li class="item flexrow" data-item-id="{{item._id}}">
                         <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-                        <h4 class="item-name">
+                        <h4 class="item-name item-edit rollable">
                             {{item.name}}
                             {{#ifEq item.type 'container'}}
                               ({{localize 'MB.ContainerHolds'}} {{item.data.capacity}})
