--- a/scss/morkborg.scss
+++ b/scss/morkborg.scss
@@ -1607,6 +1607,6 @@ a.inline-roll {
   box-shadow: 0 0 5px var(--highlight-background-color);
   text-shadow: 0 0 10px var(--highlight-background-color);
 }
-.scvmify-dialog .class-name {
+.scvm-dialog .class-name {
   text-transform: capitalize;
 }
