--- a/templates/scvm-dialog.html
+++ b/templates/scvm-dialog.html
@@ -1,4 +1,4 @@
-<form id="scvm-form" class="custom-dialog scvmify-dialog">
+<form id="scvm-form" class="custom-dialog scvm-dialog">
     <div class="section">
         <div class="subtitle">Choose from Classes</div>
         <ul>
@@ -9,7 +9,7 @@
                 </li>
             {{/each}}    
         </ul>
-        <div><a class="toggle-all">Toggle All</a>&nbsp; / &nbsp;<a class="toggle-none">Toggle None</a></div>
+        <div><a class="toggle-none">Toggle None</a>&nbsp; / &nbsp;<a class="toggle-all">Toggle All</a></div>
     </div>
 
     {{#if forActor}}
