--- a/css/morkborg.css
+++ b/css/morkborg.css
@@ -406,7 +406,6 @@
 .morkborg.sheet.actor.character
 .sheet-header
 .header-col2
-.rest-buttons
 button {
   border: none;
   border-bottom: 2px solid #777;
@@ -419,15 +418,20 @@ button {
 .morkborg.sheet.actor.character
 .sheet-header
 .header-col2
-.rest-buttons
-.rest-button {
-  width: 70px;
+.broken-button {
+  width: 80px;
 }
 
 .morkborg.sheet.actor.character
 .sheet-header
 .header-col2
-.rest-buttons
+.rest-button {
+  width: 80px;
+}
+
+.morkborg.sheet.actor.character
+.sheet-header
+.header-col2
 .get-better-button {
   width: 90px;
 }
@@ -461,15 +465,11 @@ button {
 }
 
 .morkborg.sheet.actor.character .sheet-header .classname-row {
-  flex: 0 0 30px;
-  margin-bottom: 7px;
   display: flex;
+  flex: 0 0 30px;
   flex-direction: row;
+  margin-bottom: 7px;
   width: 100%;
-}
-
-.morkborg.sheet.actor.character .sheet-header .classname-row span.class-label {
-  /* flex: 0 0 60px; */
 }
 
 .morkborg.sheet.actor.character .sheet-header .classname-row img.classimg {
@@ -500,12 +500,17 @@ button {
 }
 
 .morkborg.sheet.actor.character .sheet-header .omens-row {
+  display: flex;
   flex: 0 0 30px;
   margin-bottom: 7px;
+  width: 100%;
 }
 
 .morkborg.sheet.actor.character .sheet-header .omen-rule {
+  flex: 0 0 90px;
   margin-left: 10px;
+  margin-right: 11px;
+  margin-top: 10px;
   text-transform: lowercase;
 }
 
