--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -28,14 +28,18 @@
                     <input class="stat-input" name="data.hp.max" type="number" value="{{data.hp.max}}" data-dtype="Number"/>
                 </div>
                 <div class="rest-buttons">
+                    <button type="button" class="button item-button broken-button rollable" title="{{localize 'MB.Broken'}}">{{localize 'MB.Broken'}}</button>
                     <button type="button" class="button item-button rest-button rollable" title="{{localize 'MB.Rest'}}">{{localize 'MB.Rest'}}</button>
-                    <button type="button" class="button item-button get-better-button rollable" title="{{localize 'MB.GetBetter'}}">{{localize 'MB.GetBetter'}}</button>
                 </div>
             </div>
             <div class="omens-row">
                 <span class="stat-label">{{ localize "MB.Omens" }}:</span>
                 <input class="stat-input" name="data.omens.value" type="number" value="{{data.omens.value}}" data-dtype="Number"/>
                 <span class="rule-text omen-rule rollable">{{data.class.data.omenDie}} {{ localize "MB.PerRest"}}</span>
+                <!--
+                <div class="rest-buttons">
+                -->
+                    <button type="button" class="button item-button get-better-button rollable" title="{{localize 'MB.GetBetter'}}">{{localize 'MB.GetBetter'}}</button>
             </div>
             <div class="miseries-row">
                 <label class="stat-label miseries-label">{{ localize "MB.Miseries" }}:</label>
